--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npx parcel index.html",
     "build": "npx parcel build index.html",
-    "predeploy": "rm -rf dist && parcel build src/index.html --no-source-maps --public-url ./",
+    "predeploy": "rm -rf dist && parcel build index.html --no-source-maps --public-url ./",
     "deploy": "gh-pages -d dist",
     "test": "jest"
   },
