--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dbugghi-foods",
   "version": "1.0.0",
   "description": "Food Ordering App",
-  "main": "App.js",
+  "main": "index.html",
   "scripts": {
     "start": "npx parcel index.html",
     "build": "npx parcel build index.html",
@@ -27,6 +27,8 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "parcel": "^2.12.0"
+    "parcel": "^2.12.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
