--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
-    "parcel": "^2.12.0"
+    "parcel": "^2.12.0",
+    "react-router-dom": "^6.23.1"
   }
 }
